# jules_test

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
my-tauri-app/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
my-tauri-app/src/: App.tsx
src/: App.css  App.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  menu.rs
src/components/: ControlArea.tsx  Note.test.tsx  Note.tsx  PianoKeyboard.test.tsx  PianoKeyboard.tsx  PianoRoll.test.tsx  PianoRoll.tsx
src/contexts/: MusicDataContext.tsx
src/types/: music.ts
